# bitrag-theorems

./: .gitignore  Cargo.toml  LICENSE  README.md  cite.bib  paper.md
.github/workflows/: ci.yml
ci/: ci.yml
crates/bitrag-theorems/: Cargo.toml
crates/bitrag-theorems/benches/: scaling_bench.rs
crates/bitrag-theorems/src/: corpus.rs  jl_bound.rs  lib.rs  prng.rs  scaling.rs  tropical.rs
crates/bitrag-theorems/tests/: exp4_corpus4.rs  exp5_corpus5.rs  exp_failure_cases.rs  exp_jl_bound.rs  exp_xi_asymptotic.rs
data/: README.md
experiments/: Cargo.toml
experiments/src/: lib.rs
paper/tables/: table_corollary_c_llm.md  table_corpus_1to3.md  table_exp4_corpus4.md  table_exp5_corpus5.md  table_exp_failure_cases.md  table_exp_jl_bound.md  table_exp_xi_asymptotic.md  table_lemma_t5_rank.md
scripts/: render_paper.sh  reproduce.sh  reproduce_all.sh  run_experiments.sh
