[package]
name = "bitrag-theorems-experiments"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"
license = "Apache-2.0"
description = "Reproducibility experiments for bitrag-theorems: Theorem B scaling law, Lemma T5, Cor C, and the four supplementary experiments (cross-corpus / asymptotic ξ / F2 JL bound / failure cases)."
repository = "https://github.com/chikaharu/bitrag-theorems"
readme = "../README.md"

[lib]
name = "bitrag_theorems_experiments"
path = "src/lib.rs"

[[bin]]
name = "exp_corpus_4_5"
path = "src/bin/exp_corpus_4_5.rs"

[[bin]]
name = "exp_xi_asymptotic"
path = "src/bin/exp_xi_asymptotic.rs"

[[bin]]
name = "exp_jl_bound"
path = "src/bin/exp_jl_bound.rs"

[[bin]]
name = "exp_failure_cases"
path = "src/bin/exp_failure_cases.rs"

[profile.release]
opt-level = 3
lto = true
